[tool.poetry]
name = "neverlose"
version = "1.0.0"
description = "Neverlose web api wrapper"
authors = ["es3n1n"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
requests = "^2.25.1"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
